# alpha_score

./: CMakeLists.txt  readMe.md  requirements.txt  settings.py  test.py
Document/: command_request_3th.xlsx
data_ingestion/: .gitignore  app_bid_ask.py  app_bid_ask_single.py  command_refer.json  config_loader.py  historical_price_fetcher.py  settings.py  symbols.json
data_ingestion/parser/: message_router.py  update_parser.py
data_ingestion/prompt/: huong-dan-mapping-data.md  layer2.1-get-input.txt
data_ingestion/storage/: paths.py  writer.py
data_ingestion/utils/: logging_utils.py  time_utils.py
data_ingestion/ws/: session.py
data_processing/: app_layer2_pipeline.py  app_phase0_raw_source_intake.py  build_trial_daily_fpt_2026_03_13.py  normalize_daily_market_data.py
data_processing/layer2/: __init__.py  phase0.py  phase1.py  phase2.py  phase3.py  phase4.py
data_processing/prompt/: DATA_FIELDS_GUIDE.md  architecture for layer 2.md  overview this layer.md  phase0-raw-source-intake.md
feature_engine/: app_layer3_pipeline.py  prompt.md
feature_engine/data/FPT/phase1_market_state_construction/2026/: 2026-03-13.json
feature_engine/layer3/: __init__.py  common.py  phase0.py  phase1.py  phase2.py  phase3.py  phase4.py  phase5.py
src/: main.cpp
storage/: writer.py
ws/: client.py  pool.py
